# QtProject

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp  mainwindow.cpp  mainwindow.h
